Box selection not working with Intel HD Graphics 620 #62947

Closed
opened 2019-03-26 00:58:35 +01:00 by Marc · 41 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Intel(R) HD Graphics 620 Intel 4.5.0 - Build 25.20.100.6472

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-22 21:47, hash: faecac0b5e
Worked: (optional)

Short description of error
Selection box doesn't seem to work

Exact steps for others to reproduce the error
I'm doing the following:

  • Starting Blender 2.8 (using the default blend file - also deleted the default settings to let blender create a new one)
  • I make a duplicate of the default Cube (shift+d) and put it to an other place.
  • I click with the mouse inside the 3D view and draw a selection box

Result: only the last selected object + the light will be selected. If I click to the camera (to select it), deselect all and try to select all using the selection box, only the camera and the light will be selected. Even if the two cubes are inside the box. If I select on of the cubes (by clicking on it), deselect all and draw a box, only that cube and the light will be selected, even if the camera and the other cube had been sorrunded by the selection box.

It doesn't matter whether I'm in the projection or orthogal view. But now comes the funny part: The lasso selection works fine. And, If I test it on another system than the one printed below, I works fine, too.

What can I do to help you find that problem?

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Intel(R) HD Graphics 620 Intel 4.5.0 - Build 25.20.100.6472 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-22 21:47, hash: `faecac0b5e` Worked: (optional) **Short description of error** Selection box doesn't seem to work **Exact steps for others to reproduce the error** I'm doing the following: - Starting Blender 2.8 (using the default blend file - also deleted the default settings to let blender create a new one) - I make a duplicate of the default Cube (shift+d) and put it to an other place. - I click with the mouse inside the 3D view and draw a selection box Result: only the last selected object + the light will be selected. If I click to the camera (to select it), deselect all and try to select all using the selection box, only the camera and the light will be selected. Even if the two cubes are inside the box. If I select on of the cubes (by clicking on it), deselect all and draw a box, only that cube and the light will be selected, even if the camera and the other cube had been sorrunded by the selection box. It doesn't matter whether I'm in the projection or orthogal view. But now comes the funny part: The lasso selection works fine. And, If I test it on another system than the one printed below, I works fine, too. What can I do to help you find that problem?
Author

Added subscriber: @SchodMC

Added subscriber: @SchodMC

#63825 was marked as duplicate of this issue

#63825 was marked as duplicate of this issue

#63568 was marked as duplicate of this issue

#63568 was marked as duplicate of this issue

#63288 was marked as duplicate of this issue

#63288 was marked as duplicate of this issue
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

This comment was removed by @nacioss

*This comment was removed by @nacioss*

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Does this still happen with the latest GPU drivers? https://downloadcenter.intel.com/product/80939/Graphics-Drivers

Does this still happen with the latest GPU drivers? https://downloadcenter.intel.com/product/80939/Graphics-Drivers
Author

I've made a simple recording showing what I'm doing. As you can see, I deleted the properties to have a clean setup. And the only thing always selected is the light. For the rest, only the last active item (one of the boxes or the camera) will be selected. When changing to lasso mode, every thing works fine.

BelnderBoxSelectionProblem.flv

About the video driver - well, I'v the latest my laptop manufactor offers to me (which sadly isn't the realy up-to-date from intel). Don't know if this makes a difference. I also deselected the open "OpenGL Depth Picking" for Viewport - Selection in the settings. Don't know if that has something to do with workarround for driver related problems here.

I've made a simple recording showing what I'm doing. As you can see, I deleted the properties to have a clean setup. And the only thing always selected is the light. For the rest, only the last active item (one of the boxes or the camera) will be selected. When changing to lasso mode, every thing works fine. [BelnderBoxSelectionProblem.flv](https://archive.blender.org/developer/F6890837/BelnderBoxSelectionProblem.flv) About the video driver - well, I'v the latest my laptop manufactor offers to me (which sadly isn't the realy up-to-date from intel). Don't know if this makes a difference. I also deselected the open "OpenGL Depth Picking" for Viewport - Selection in the settings. Don't know if that has something to do with workarround for driver related problems here.

Added subscriber: @zgorg

Added subscriber: @zgorg

This comment was removed by @zgorg

*This comment was removed by @zgorg*

This comment was removed by @zgorg

*This comment was removed by @zgorg*

This comment was removed by @zgorg

*This comment was removed by @zgorg*

Added subscriber: @brecht

Added subscriber: @brecht

@zgorg, if you can't behave professionally your account will be suspended, this is your last warning.

No one closed your report, all we did was deduplicate reports since you reported the same bug 3 times while the first report was still open.

@zgorg, if you can't behave professionally your account will be suspended, this is your last warning. No one closed your report, all we did was deduplicate reports since you reported the same bug 3 times while the first report was still open.

@SchodMC usually drivers from the OEM is outdated and you should use the official drivers from Intel/AMD/Nvidia.

Can you see if the latest drivers from intels website fixes this?

@SchodMC usually drivers from the OEM is outdated and you should use the official drivers from Intel/AMD/Nvidia. Can you see if the latest drivers from intels website fixes this?
Author

I cannot install the driver from intels page. They don't offer a download and when I'm using the Intel Driver Support Assistant, that tool sends me to the Dell hompage. However, I installed (again) the latest driver from Dell for my system. That driver there is from Feb. 1st, 2019. So it isn't that outdated. And that's the newest one I can install (while the newest on the intel homepage is from March, 20th 2019). That's all I can tell.

But I don't get the relation to the driver here. Because box selection won't work, while using the lasso works fine.

I cannot install the driver from intels page. They don't offer a download and when I'm using the Intel Driver Support Assistant, that tool sends me to the Dell hompage. However, I installed (again) the latest driver from Dell for my system. That driver there is from Feb. 1st, 2019. So it isn't that outdated. And that's the newest one I can install (while the newest on the intel homepage is from March, 20th 2019). That's all I can tell. But I don't get the relation to the driver here. Because box selection won't work, while using the lasso works fine.

I don't know either why the lasso works fine. The objects are select by performing queries to the GPU. So for some reason, the box select operation fails with your GPU/driver.

I don't know either why the lasso works fine. The objects are select by performing queries to the GPU. So for some reason, the box select operation fails with your GPU/driver.

OK I will imagine that I was wrong. I explained better with a video the last time (and the subject was "opened"). and the first one was not well explained and I can't find it. and it was since a long time as need triage, even with new elements. 3 months. I show in the last video the lasso works fine. the select box when all origins visible, too. but, not when they are not all visible (even with factory settings). [and now in the last update I can't select with the left clic and drag an object. but it's a problem of shortcuts because it doesn't do it with factory settings.]

OK I will imagine that I was wrong. I explained better with a video the last time (and the subject was "opened"). and the first one was not well explained and I can't find it. and it was since a long time as need triage, even with new elements. 3 months. I show in the last video the lasso works fine. the select box when all origins visible, too. but, not when they are not all visible (even with factory settings). [and now in the last update I can't select with the left clic and drag an object. but it's a problem of shortcuts because it doesn't do it with factory settings.]
Brecht Van Lommel changed title from Selection Box not working to Box selection not working with Intel HD Graphics 620 2019-04-04 05:44:15 +02:00

Added subscriber: @CakeDispenser

Added subscriber: @CakeDispenser

Removed subscriber: @zgorg

Removed subscriber: @zgorg

Added subscriber: @zgorg

Added subscriber: @zgorg

Added subscriber: @ZeroNyx

Added subscriber: @ZeroNyx

@ZedDB Thanks for merging me, sorry I failed to find this as duplicate.

Just to add my own relevant bits from my task: I'm having the same issue with similar hardware and OS. Also I generated a gif: https://i.stack.imgur.com/GDPtt.gif

The gif is from the blender beta build a few weeks ago, although I have been building from source on my machine everyday, and the issue is still present. Please let me know if I can provide any other details to assist.

@ZedDB Thanks for merging me, sorry I failed to find this as duplicate. Just to add my own relevant bits from my task: I'm having the same issue with similar hardware and OS. Also I generated a gif: https://i.stack.imgur.com/GDPtt.gif The gif is from the blender beta build a few weeks ago, although I have been building from source on my machine everyday, and the issue is still present. Please let me know if I can provide any other details to assist.

I think we'll need a developer to reproduce this on a computer and then investigate, it's difficult to figure out the cause from just debug logs.

I think we'll need a developer to reproduce this on a computer and then investigate, it's difficult to figure out the cause from just debug logs.
Member

Added subscriber: @EitanSomething

Added subscriber: @EitanSomething
Member

I'm having the same problem. You can only box select the last object created it doesn't only apply to duplicating and cubes.

I'm having the same problem. You can only box select the last object created it doesn't only apply to duplicating and cubes.

@brecht I cloned the repo last week hoping to try to diagnose the issue a little better and maybe come up with a patch myself, however I couldn't get the build working in VS2017. However I just tried again and it works. I'll try to play around with it tonight after work, however if you feel it'll help I'm happy to peer this together if that's doable. I'm a newbie to the blender codebase and I don't really know what I'm looking for in all honesty.

@brecht I cloned the repo last week hoping to try to diagnose the issue a little better and maybe come up with a patch myself, however I couldn't get the build working in VS2017. However I just tried again and it works. I'll try to play around with it tonight after work, however if you feel it'll help I'm happy to peer this together if that's doable. I'm a newbie to the blender codebase and I don't really know what I'm looking for in all honesty.

Added subscriber: @GavinScott

Added subscriber: @GavinScott

I tried to reproduce it using yesterday's buildbot Windows 64-bit version 2019-04-24 d966c2f0c2 on a laptop with Windows 10 64-bit 1803 (10.0.17134) and HD-620 graphics (i3-7100U CPU) and Intel Graphics driver version 21.20.16.4534.

This system had not previously had Blender installed in any form.

I could not get the problem to reproduce in that environment, and box selection worked perfectly in every scenario I could come up with.

I tried to reproduce it using yesterday's buildbot Windows 64-bit version 2019-04-24 d966c2f0c2ad on a laptop with Windows 10 64-bit 1803 (10.0.17134) and HD-620 graphics (i3-7100U CPU) and Intel Graphics driver version 21.20.16.4534. This system had not previously had Blender installed in any form. I could not get the problem to reproduce in that environment, and box selection worked perfectly in every scenario I could come up with.

After upgrading the Intel Graphics driver to 23.20.16.5038 I can now reproduce the problem exactly as demonstrated by the original submitter.

After upgrading the Intel Graphics driver to 23.20.16.5038 I can now reproduce the problem exactly as demonstrated by the original submitter.

Some observations / clues:

Edit mode is not affected. You can select multiple objects and tab into edit mode and box selection works perfectly with different component types etc. across separated geometry or whatever you like. In face component mode you can box select the middle of a face (no vertices in the box) without issue.

Display mode does not seem to make a difference (wireframe/solid/etc.)

The only thing that's able to be box-selected in Object mode is point-like objects, Lights and Object Centers. If you just have a bunch of Lights then things work fine and they're always box selectable. No other object can be selected unless its Object Center is displayed, which is why by default it only selects the last selected object (which continues to show its object center after being deselected which is something that has always bugged me). If you turn on Object Centers (all) then everything can be selected but the selection box has to include the object center.

I played with all the Intel Driver settings without affecting the problem.

Some observations / clues: Edit mode is not affected. You can select multiple objects and tab into edit mode and box selection works perfectly with different component types etc. across separated geometry or whatever you like. In face component mode you can box select the middle of a face (no vertices in the box) without issue. Display mode does not seem to make a difference (wireframe/solid/etc.) The only thing that's able to be box-selected in Object mode is point-like objects, Lights and Object Centers. If you just have a bunch of Lights then things work fine and they're always box selectable. No other object can be selected unless its Object Center is displayed, which is why by default it only selects the last selected object (which continues to show its object center after being deselected which is something that has always bugged me). If you turn on Object Centers (all) then everything can be selected but the selection box has to include the object center. I played with all the Intel Driver settings without affecting the problem.
Member

This affects Meshes,curves,surfaces, metaballs (only part gets selected),light probes,force fields,cameras,empties,text,and lattices.

This affects Meshes,curves,surfaces, metaballs (only part gets selected),light probes,force fields,cameras,empties,text,and lattices.
Jeroen Bakker self-assigned this 2019-05-07 15:32:13 +02:00

This is probably obvious, but reading #64281 points out why lasso select appears to work fine (because it's based only on the object centers rather than geometry).

This is probably obvious, but reading #64281 points out why lasso select appears to work fine (because it's based only on the object centers rather than geometry).
Member

I installed windows with the latest drivers (26.20.100.6709) and was able to reproduce it with the latest buildbot build. Will try to setup a build environment and see if I can tackle the issue.

I installed windows with the latest drivers (26.20.100.6709) and was able to reproduce it with the latest buildbot build. Will try to setup a build environment and see if I can tackle the issue.
Member

Current observaties are that the neerstortte Intel drivers might have implemented the OpenGL standard more strict. We see that when we draw the selection buffer the depth checking is disabled completely and Write depth is disabled. This results in that glQueries that only work on depth buffer give incorrect results.

Another observation is that the object centres overlay updates the deptbuffer hence the active object is selected. When all object centres are shown you will be able to select objects. But this is not the intended behaviour.

We expect the drawmanager lock state being faulty implemented. Together with the more strict OpenGL implementation leads to this ticket.

Current observaties are that the neerstortte Intel drivers might have implemented the OpenGL standard more strict. We see that when we draw the selection buffer the depth checking is disabled completely and Write depth is disabled. This results in that glQueries that only work on depth buffer give incorrect results. Another observation is that the object centres overlay updates the deptbuffer hence the active object is selected. When all object centres are shown you will be able to select objects. But this is not the intended behaviour. We expect the drawmanager lock state being faulty implemented. Together with the more strict OpenGL implementation leads to this ticket.

Added subscriber: @LujaRajbhandari

Added subscriber: @LujaRajbhandari

I'm having the same problem. The box selection only works when "all origins" option is turned on in viewport overlays. The box selection only seems to be selecting the origin and not the geometry.

I'm having the same problem. The box selection only works when "all origins" option is turned on in viewport overlays. The box selection only seems to be selecting the origin and not the geometry.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

I have detected that when when the depth state is disabled that the glQueries are not working for this driver platform combination. A quick hack is to enable the depth state just before drawing the depth-pass.
I have not figured out what driver-call disables the depth state. the next code snippit is working.

diff --git a/source/blender/draw/engines/basic/basic_engine.c b/source/blender/draw/engines/basic/basic_engine.c
index 360d1d30736..264df21d94f 100644
--- a/source/blender/draw/engines/basic/basic_engine.c
+++ b/source/blender/draw/engines/basic/basic_engine.c
@@ -181,10 +181,11 @@ static void basic_cache_finish(void *vedata)
   UNUSED_VARS(stl);
 }
 
+#include "GPU_glew.h"
 static void basic_draw_scene(void *vedata)
 {
   BASIC_PassList *psl = ((BASIC_Data *)vedata)->psl;
-
+  glEnable(GL_DEPTH_TEST);
   DRW_draw_pass(psl->depth_pass);
   DRW_draw_pass(psl->depth_pass_cull);
 }

@fclem: of course we won't accept this hack :-)

I have detected that when when the depth state is disabled that the glQueries are not working for this driver platform combination. A quick hack is to enable the depth state just before drawing the depth-pass. I have not figured out what driver-call disables the depth state. the next code snippit is working. ``` diff --git a/source/blender/draw/engines/basic/basic_engine.c b/source/blender/draw/engines/basic/basic_engine.c index 360d1d30736..264df21d94f 100644 --- a/source/blender/draw/engines/basic/basic_engine.c +++ b/source/blender/draw/engines/basic/basic_engine.c @@ -181,10 +181,11 @@ static void basic_cache_finish(void *vedata) UNUSED_VARS(stl); } +#include "GPU_glew.h" static void basic_draw_scene(void *vedata) { BASIC_PassList *psl = ((BASIC_Data *)vedata)->psl; - + glEnable(GL_DEPTH_TEST); DRW_draw_pass(psl->depth_pass); DRW_draw_pass(psl->depth_pass_cull); } ``` @fclem: of course we won't accept this hack :-)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62947
No description provided.